# ComfyUI-Animation_Nodes_and_Workflows

./: README.md  __init__.py  animationAssistantNodes.py  pyproject.toml  requirements.txt  styles.json  utils.py
animationWorkflows/: generate_512x512_video_for_LivePortrait.json
animationWorkflows/animatediff/: animateDiff_Vid_2_Vid(race and dress colour change).json  animateDiff_vid_2_cartoon.json  vid2CartoonThicklines.json
animationWorkflows/img2img/: Extremely Fast Img2ImgSDXL.json  ExtremelyFastImg2Img.json  ExtremelyFastImg2ImgSDXL.json  img2cartoonFast.json
animationWorkflows/joinVideos/: joinVideos_3no_15fps_&_2no__30fps.json  joinVideos_5no_15fps.json  joinVideos_5no_30fps.json  joinVideos_5no_30fps_2NoAudio.json  joinVideos_9no_30fps.json
animationWorkflows/move_fg_in_bg/: object_go_up_or_down.json  object_move_in_or_out.json  portrait_walk_in_or_out.json  portrait_walk_left_or_right.json
